--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,15 @@
 body {
   font-family: sans-serif;
+  background-color: #e8ca8d;
+}
+
+header {
+  height: 140px;
+  background-color: #afc999;
+}
+
+section {
+  margin-top: 80px;
 }
 
 h1, h3 {
@@ -8,12 +18,11 @@ h1, h3 {
 
 h1 {
   font-size: 50px;
-  margin-top: 40px;
+  line-height: 140px;
 }
 
 h3 {
   font-size: 20px;
-  margin-top: 130px;
 }
 
 ul {
@@ -46,8 +55,13 @@ input:focus {
   cursor: pointer;
 }
 
+.checked {
+  text-decoration: line-through;
+  background-color: #af8399;
+}
+
 li {
-  background-color: #ffda99;
+  background-color: #2c8399;
   height: 27px;
   border-radius: 8px;
   margin-top: 4px;
