--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: sans-serif;
   background-color: #e8ca8d;
+  color: #5e5f66;
 }
 
 header {
@@ -51,13 +52,18 @@ input:focus {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: black;
+  background-color: #7e0ae8;
   cursor: pointer;
+  margin-right: 7px;
+}
+
+.check:hover {
+  background-color: #ac6ee8
 }
 
 .checked {
   text-decoration: line-through;
-  background-color: #af8399;
+  background-color: #e88b9a;
 }
 
 li {
@@ -65,5 +71,15 @@ li {
   height: 27px;
   border-radius: 8px;
   margin-top: 4px;
+  padding: 0 7px;
   line-height: 27px;
+  color: #36363B;
+}
+
+.close {
+  color: #ff4d5d;
+}
+
+.close:hover {
+  color: #ff2a38;
 }
