--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,8 @@ input {
   width: 330px;
   height: 20px;
   margin: 15px auto 0 auto;
+  border-radius: 8px;
+  background-color: #2c8399;
 }
 
 input:focus {
