--- a/css/main.css
+++ b/css/main.css
@@ -1,104 +1,30 @@
-body {
-  font-family: sans-serif;
-  background-color: #e8ca8d;
-  color: #5e5f66;
-}
-
 header {
-  height: 140px;
-  background-color: #afc999;
-}
-
-section {
-  margin-top: 80px;
-}
-
-h1, h3 {
   text-align: center;
+  padding: 25px;
 }
 
 h1 {
-  font-size: 50px;
-  line-height: 140px;
+  font-family: 'Rancho', cursive;
+  font-size: 58px;
 }
 
-h3 {
-  font-size: 20px;
+aside {
+  position: absolute;
+  background-color: red;
+  top: 108px;
+  bottom: 0;
+  width: 230px;
 }
 
-ul {
-  width: 336px;
-  margin: 0 auto;
+section {
+  position: absolute;
+  background-color: blue;
+  top: 108px;
+  bottom: 0;
+  left: 230px;
+  right: 0px;
 }
 
 input {
-  display: block;
-  width: 323px;
-  height: 20px;
-  margin: 15px auto 0 auto;
-  border-radius: 8px;
-  background-color: #2c8399;
-  color: #36363b;
-  font-size: 15px;
-  padding-left: 9px;
-}
-
-input:focus {
-  outline: none;
-}
-
-.close {
-  float: right;
-  cursor: pointer;
-}
-
-.check {
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #7e0ae8;
-  cursor: pointer;
-  margin-right: 7px;
-}
-
-.check:hover {
-  background-color: #ac6ee8
-}
-
-.checked {
-  text-decoration: line-through;
-  background-color: #e88b9a;
-}
-
-li {
-  background-color: #2c8399;
-  height: 27px;
-  border-radius: 8px;
-  margin-top: 4px;
-  padding: 0 7px;
-  line-height: 27px;
-  color: #36363b;
-}
-
-.close {
-  color: #ff4d5d;
-}
-
-.close:hover {
-  color: #ff2a38;
-}
-
-button {
-  display: block;
-  margin: 4px auto 0 auto;
-  border: 0;
-  height: 25px;
-  cursor: pointer;
-  border-radius: 5px;
-  outline: none;
-}
-
-button:hover {
-  background-color: #575757;
+  width: 100%;
 }
