--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,14 @@
 header {
   text-align: center;
-  padding: 25px;
+  height: 150px;
+}
+
+header img {
+  width: 100px;
 }
 
 h1 {
+  display: inline;
   font-family: 'Rancho', cursive;
   font-size: 58px;
 }
@@ -11,7 +16,7 @@ h1 {
 aside {
   position: absolute;
   background-color: red;
-  top: 108px;
+  top: 150px;
   bottom: 0;
   width: 230px;
 }
@@ -19,7 +24,7 @@ aside {
 section {
   position: absolute;
   background-color: blue;
-  top: 108px;
+  top: 150px;
   bottom: 0;
   left: 230px;
   right: 0px;
